# Python-SDK

./: .env.example  .flake8  .gitignore  .gitlab-ci.yml  .isort.cfg  .pre-commit-config.yaml  LICENSE.txt  MANIFEST.in  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: deploy.yml
examples/: Specific interpretation Dip calculation.ipynb  Specific interpretation Dip calculation.py  bulk_zone_statistics_calculation.py  dls excess warning.py  dls_excess_warning.py  examples.ipynb  fill_log_gaps.py  interpretation_dip_calculation.py  tvt_rop_heatmap.py  well_plan_preparation_creation.py  well_topset_comparison.py
examples/calculations/: __init__.py  constants.py  enums.py  interpretation.py  trajectory.py
examples/tools/: base.py  enums.py  interpretation.py  trajectory.py
examples/tvt_rop_heatmap/: requirements.txt  tvt_rop_heatmap.py
python-sdk/: __init__.py  api.py
python_sdk/: base.py  client.py  exceptions.py  interpretation.py  models.py  nested_well.py  papi.py  project.py  target_line.py  trajectory.py  well.py
python_sdk/papi/: base.py  client.py  exceptions.py
python_sdk/utils/: objects.py  settings.py
requirements/: base.txt  dev.txt  internal.txt  prod.txt
src/rogii_solo/: __init__.py  base.py  client.py  comment.py  earth_model.py  exceptions.py  horizon.py  interpretation.py  log.py  mudlog.py  nested_well.py  project.py  target_line.py  topset.py  trace.py  trajectory.py  types.py  typewell.py  well.py
src/rogii_solo/calculations/: base.py  constants.py  converters.py  enums.py  exceptions.py  interpretation.py  trajectory.py  types.py
src/rogii_solo/examples/: dls_excess_warning.py  interpretation_dip_calculation.py  well_plan_preparation_creation.py
src/rogii_solo/examples/calculations/: trajectory.py
src/rogii_solo/papi/: base.py  client.py  types.py
src/rogii_solo/utils/: constants.py  objects.py
tests/: conftest.py  papi_data.py  test_client.py  test_conversion.py  test_data_conversion.py  test_papi.py  test_python_sdk_client.py  test_solo_client.py  test_solo_client_papi.py  utils.py
tests/main/: test_data_conversion.py  test_solo_client.py  test_traces.py
tests/mocks/: papi_data.py  solo_client.py
