[metadata]
name = python-sdk
version = attr: python_sdk.__version__
description = Rogii Python SDK
license_files = LICENSE.txt
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
python_requires = >=3.8
packages = find:

[flake8]
max-complexity = 20
max-line-length = 119
exclude =
    tests
    tests.*

[isort]
multi_line_output = 3
line_length = 119

[options.packages.find]
exclude =
    tests
    tests.*
